# AI-connectivity-hackathon

./: app.py  pyproject.toml  requirements.txt
