[project]
name = "finance-assistant"
version = "0.1.0"
description = "AI Powered financial management app which will handle my finance"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "made by hanzla khan"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openai (>=1.60.1,<2.0.0)",
    "transformers (>=4.48.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
